--- a/Tests/Parser/fixtures/alias_devices.yml
+++ b/Tests/Parser/fixtures/alias_devices.yml
@@ -37,3 +37,13 @@
  user_agent: Mozilla/5.0 (Android 7.0; samsung SM-A710F) AppleWebKit/537.36 KHTML, like Gecko Version/4.0 Chrome/30.0.0.0 Mobile Safari/537.36 SurfBrowser/3.0
  alias:
    name: SM-A710F
+
+-
+  user_agent: UCWEB/2.0 (MIDP-2.0; U; Adr 6.0.1; ru; Redmi_4X) U2/1.0.0 UCBrowser/11.1.2.1113 U2/1.0.0 Mobile
+  alias:
+    name: Redmi_4X
+
+-
+  user_agent: UCWEB/2.0 (Linux; U; Adr 4.1.1; en-US; C1605) U2/1.0.0 UCBrowser/8.6.0.276 U2/1.0.0 Mobile
+  alias:
+    name: C1605
