--- a/Tests/fixtures/smartphone-17.yml
+++ b/Tests/fixtures/smartphone-17.yml
@@ -4365,3 +4365,57 @@
     model: Redmi K30 5G
   os_family: Android
   browser_family: Chrome
+-
+  user_agent: Mozilla/5.0 (Linux; Android 6.0; INTENSE POWER) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/73.0.3683.90 Mobile Safari/537.36
+  os:
+    name: Android
+    version: "6.0"
+    platform: ""
+  client:
+    type: browser
+    name: Chrome Mobile
+    version: 73.0.3683.90
+    engine: Blink
+    engine_version: ""
+  device:
+    type: smartphone
+    brand: FireFly Mobile
+    model: Intense Power
+  os_family: Android
+  browser_family: Chrome
+-
+  user_agent: Mozilla/5.0 (Linux; Android 6.0; INTENSE_METAL_2 Build/MRA58K; wv) AppleWebKit/537.36 (KHTML, like Gecko) Version/4.0 Chrome/44.0.2403.119 Mobile Safari/537.36
+  os:
+    name: Android
+    version: "6.0"
+    platform: ""
+  client:
+    type: browser
+    name: Chrome Webview
+    version: 44.0.2403.119
+    engine: Blink
+    engine_version: ""
+  device:
+    type: smartphone
+    brand: FireFly Mobile
+    model: Intense Metal 2
+  os_family: Android
+  browser_family: Chrome
+-
+  user_agent: Mozilla/5.0 (Linux; Android 8.1.0; INTENSE_XT) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/76.0.3809.111 Mobile Safari/537.36
+  os:
+    name: Android
+    version: 8.1.0
+    platform: ""
+  client:
+    type: browser
+    name: Chrome Mobile
+    version: 76.0.3809.111
+    engine: Blink
+    engine_version: ""
+  device:
+    type: smartphone
+    brand: FireFly Mobile
+    model: Intense XT
+  os_family: Android
+  browser_family: Chrome
