--- a/regexes/device/mobiles.yml
+++ b/regexes/device/mobiles.yml
@@ -10863,15 +10863,15 @@ Rover:
   device: 'feature phone'
   model: '$1'
 
-# RoverPad
+# RoverPad or Rover Pad
 RoverPad:
-  regex: '(RoverPad|RoverPhone)(?:[);/ ]|$)'
+  regex: '(Rover[ ]?Pad|RoverPhone)(?:[);/ ]|$)'
   device: 'tablet'
   models:
     - regex: 'RoverPhone(?:[);/ ]|$)'
       model: ''
       device: 'smartphone'
-    - regex: 'RoverPad sky 7.85(?:[);/ ]|$)'
+    - regex: 'Rover[ ]?Pad sky 7.85(?:[);/ ]|$)'
       model: 'Sky 7.85'
     - regex: 'RoverPad (10.4|Air S70|9.7 3G|Sky 9.7|3W A73|3W7|3WT70|3W9.4)(?:[);/ ]|$)'
       model: '$1'
@@ -17551,3 +17551,9 @@ iVooMi:
   regex: 'Innelo_1(?:[);/ ]|$)'
   device: 'smartphone'
   model: 'Innelo 1'
+
+# Pixelphone
+Pixelphone:
+  regex: 'Pixelphone S1(?:[);/ ]|$)'
+  device: 'smartphone'
+  model: 'S1'
